<resources>
    <string name="app_name">MultiplicationTable</string>
    <string name="button_study">Study</string>
    <string name="button_check">Want test knowledge</string>
    <string name="button_progress">My progress</string>
    <string name="button_settings">Settings</string>
    <string name="learning">Learning</string>
    <string name="button_by_2">by 2</string>
    <string name="button_by_3">by 3</string>
    <string name="button_by_4">by 4</string>
    <string name="button_by_5">by 5</string>
    <string name="button_by_6">by 6</string>
    <string name="button_by_7">by 7</string>
    <string name="button_by_8">by 8</string>
    <string name="button_by_9">by 9</string>
    <string name="button_by_random">by mixed</string>
    <string name="repeat_aloud">Repeat aloud:</string>
    <string name="check">Check</string>
    <string name="multiplication">Multiplication</string>
    <string name="multiplication_by">multiplication by  %1$d</string>
    <string name="whole_table">whole shuffled table</string>
    <string name="voice_irina">Irina (ru)</string>
    <string name="voice_robot_maxim">Robot Maxim (ru)</string>
    <string name="pronunciation_header">Pronunciation</string>
    <string name="voice_title">Voice</string>
    <string name="speaking_speed">Speaking speed - %1$d\%%</string>
    <string name="key_voice" translatable="false">voice</string>
    <string name="key_voice_speed" translatable="false">voice_speed</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="repeat">Repeat</string>
    <string name="stop">Stop</string>
    <string name="proceed">Proceed</string>
    <string name="button_ok">Ok</string>
    <string name="exit">Exit</string>
    <string name="my_progress">My successes</string>
    <string name="key_statistic" translatable="false">statistic</string>
    <string name="clear_statistic">Clear statistic</string>

</resources>
