<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.SettingsFragment">

    <PreferenceCategory app:title="@string/pronunciation_header">

        <!--        <EditTextPreference-->
        <!--            app:key="signature"-->
        <!--            app:title="@string/signature_title"-->
        <!--            app:useSimpleSummaryProvider="true" />-->

        <androidx.preference.ListPreference
            app:key="@string/key_voice"
            app:title="@string/voice_title"
            android:icon="@drawable/ic_baseline_record_voice_over_24"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            app:key="@string/key_voice_speed"
            android:icon="@drawable/ic_baseline_speed_24"
            app:title="@string/speaking_speed" />


    </PreferenceCategory>

    <!--    <PreferenceCategory app:title="@string/sync_header">-->

    <!--        <SwitchPreferenceCompat-->
    <!--            app:key="sync"-->
    <!--            app:title="@string/sync_title" />-->

    <!--        <SwitchPreferenceCompat-->
    <!--            app:dependency="sync"-->
    <!--            app:key="attachment"-->
    <!--            app:summaryOff="@string/attachment_summary_off"-->
    <!--            app:summaryOn="@string/attachment_summary_on"-->
    <!--            app:title="@string/attachment_title" />-->

    <!--    </PreferenceCategory>-->

</PreferenceScreen>
