<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.study.StudyFragment">

    <TextView
        android:id="@+id/text_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/multiplication"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/text_instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/repeat_aloud"
        android:textSize="26sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/recycler_memory_list"
        app:layout_constraintTop_toBottomOf="@+id/text_action"
        tools:layout_editor_absoluteX="0dp"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_memory_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_instruction"
        tools:listitem="@layout/study_item" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_stop_repeat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_memory_list" />

    <Button
        android:id="@+id/button_stop_repeat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:text="@string/repeat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_exit" />

    <Button
        android:id="@+id/button_start"
        style="@style/ButtonStyleByNum"
        android:layout_width="wrap_content"
        android:backgroundTint="#5BFFAD"
        android:minWidth="200dp"
        android:text="@string/start"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_instruction"
        app:strokeColor="#3F3A44"
        app:strokeWidth="3dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
